@@ -18,7 +18,7 @@
         <files>
             f.html fft.html imagemap.htm imagemap.png pic.png pic2.bmp
             tables.htm test.htm listtest.htm i18n.gif 8859_2.htm cp1250.htm
-            regres.htm
+            regres.htm foo.png subsup.html
         </files>
     </wx-data>
 
